@@ -16,6 +16,7 @@ Changes for 2.0.1rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-4923] fixed ids sorting before update and delete (Eduard)
 A......... [ZBX-4994] fixed sql error when try to remove host interface used in items (Vedmak)
 ..F....... [ZBX-4918] fixed value mapping for {ITEM.VALUE} and {ITEM.LASTVALUE} macros (Vedmak)
 A......... [ZBX-4923] fixed ids sorting before update and delete (Eduard)
